--- a/angular/package.json
+++ b/angular/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
     "moment": "^2.17.1",
+    "ng2-awesome-disqus": "^1.1.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
