--- a/angular/package.json
+++ b/angular/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.17.1",
     "ng2-awesome-disqus": "^1.1.0",
+    "ng2-page-scroll": "^4.0.0-beta.6",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
