--- a/angular/package.json
+++ b/angular/package.json
@@ -8,7 +8,8 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "staging": "ng build; scp src/images/* root@104.131.157.182:/var/www/staging/images/; scp dist/* root@104.131.157.182:/var/www/staging/"
   },
   "private": true,
   "dependencies": {
